fix letter spacing all caps headings

--- a/presentation-themes/me.scss
+++ b/presentation-themes/me.scss
@@ -272,6 +272,7 @@ a {
         font-size: 8rem;
         font-weight: $font-weight-bold;
         color: $primary;
+        letter-spacing: 0.05em;
     }
   }
   
